8364314: java_lang_Thread::get_thread_status fails assert(base != nullptr) failed: Invalid base